# hobby-code

./: .gitignore  CMakeLists.txt  README.md  generate.py
1/: 1.c  CMakeLists.txt  Q1-test.cpp  Q1.cpp  Q1.hpp  Q1.txt  main.cpp
10/: 10.c
11/: 11.c  main.cpp
12/: main.cpp
13/13/13/: main.cpp
14/: main.cpp
15/: main.cpp
16/16/: main.cpp
17/: main.cpp
18/18/18/: main.cpp
19/19/19/: main.cpp
2/: 2.c  CMakeLists.txt  Q2-test.cpp  Q2.cpp  Q2.hpp  Q2.txt  main.cpp
20/: main.cpp
20/20_test/20_test/: main.cpp
21/21/21/: main.cpp
22/22/22/: main.cpp
23/: main.cpp
24/: main.cpp
25/25/25/: main.cpp
25/25_test/25_test/: main.cpp
26/26/26/: main.cpp
27/: 27.py
28/: 28 Theory.txt  28.cpp
29/: Question29.txt  bignumber.cpp
29/29/29/: bignumber.h  main.cpp
3/: 3.c  CMakeLists.txt  Q3-test.cpp  Q3.cpp  Q3.hpp  main.cpp
30/: 30.py  Question30.txt
31/: 31.py  31.txt
32/: 32.txt  main.cpp
33/: 33.txt
33/33/33/: main.cpp
34/: main.cpp
35/: bignumber.cpp
35/35/35/: bignumber.h  main.cpp
36/36/36/: main.cpp
37/: Question37.txt  main.cpp
37/37/: 37.sln  37.userprefs
37/37/37/: 37.cproj
39/: CMakeLists.txt  q39.h
39/39/: q39.cpp
4/: 4.c  CMakeLists.txt  Q4-test.cpp  Q4.cpp  Q4.hpp  Q4.txt  Q4Private.hpp  main.cpp
40/40/40/: main.cpp
41/: CMakeLists.txt  Q41.cpp  Q41.hpp  Q41.txt  main.cpp
42/: CMakeLists.txt  Q42.cpp  Q42.hpp  Q42.txt  main.cpp
43/: 43.cpp  43.hpp  43.txt  CMakeLists.txt  main.cpp
44/: CMakeLists.txt  Q44.cpp  Q44.hpp  main.cpp
45/: CMakeLists.txt  Q45.txt  main.cpp
46/: CMakeLists.txt  main.cpp
5/: 5.c  CMakeLists.txt  Q5-test.cpp  Q5.cpp  Q5.hpp  main.cpp
6/: 6.c  CMakeLists.txt  Q6-test.cpp  Q6.cpp  Q6.hpp  Q6.txt  Q6Private.hpp  main.cpp
67/67/67/: main.cpp
7/: 7.c  CMakeLists.txt  Q7-test.cpp  Q7.cpp  Q7.hpp  Q7.txt  main.cpp
8/: 8.c  CMakeLists.txt  Q8-test.cpp  Q8.cpp  Q8.hpp  Q8.hxx  main.cpp
9/: 9.c  CMakeLists.txt  Q9-test.cpp  Q9.cpp  Q9.hpp  main.cpp
BigNumber/BigNumber/: bignumber.cpp  bignumber.h  main.cpp
BigNumber/BigNumberLib/: BigNumber.cpp  BigNumber.h  BigNumberLib.cproj  BigNumberLib.md.pc
BigNumber2.0/BigNumber2/: BigNumber2.sln  BigNumber2.userprefs
BigNumber2.0/BigNumber2/BigNumber2/: BigNumber2.cpp  BigNumber2.cproj  BigNumber2.hpp  BigNumber2.md.pc  BigNumber2Impl.cpp  BigNumber2Impl.hpp  BigNumericalData.cpp  BigNumericalData.hpp  Code.cc  Memory.cpp  Memory.hpp  Private.hpp  Public.hpp  Types.hpp  main.test.cpp
BigNumber2.0/BigNumber2/Common/: Code.cc  Memory.cpp  Memory.hpp  Private.hpp  Public.hpp  String.cpp  String.hpp  Types.hpp  Utils.cpp  Utils.hpp  main.test.cpp
BigNumber2.0/BigNumber2/Test/: Test.cproj  main.cpp
BigNumber3.0/: BigNumber.hpp
Build_old/Sandbox/: Sandbox.cpp  Sandbox.hpp
Common/: CMakeLists.txt  CircularBuffer.hpp  Common-test.cc  Common.hpp  File.cpp  File.hpp  GlobalDefines.hpp  LowestCommonMultiple.cpp  LowestCommonMultiple.hpp  Memory.cpp  Memory.hpp  Palindrome.c  Palindrome.h  Prime-test.cpp  Types.hpp  UPInt.cpp  UPInt.hpp  Uncopyable.hpp  Verify.hpp
Common/Prime/: PrimeSeive.hpp  PrimeSeive.hxx  PrimeSeive.test.cpp  PrimeSeiveImpl.hpp.old  PrimeSeiveImpl.hxx.old
Geometric/: GeometricNumbers.hpp  GeometricNumbers.hxx
MetaSandbox/: CMakeLists.txt  Conversion.hpp  NullEmpty.hpp  Select.hpp  StaticAssert.hpp  TypeList.hpp  main.cpp
ProjectGenerator/: generate.py  run_tests.py
ProjectGenerator/projgen/: builder.py  content.py  utils.py
projgen/: builder.py  content.py
